1998-10-05    <jaharkes@cs.cmu.edu>

	* Integrated some of the useful & stable development patches.
	 - Updated README.win95
	 - On linux sendto retries once when ECONNREFUSED is returned.
	 - Updated scripts for the new portnumbers.
	 - Updated server setup scripts.
	 - removed createvol, recreatevol, and recreatevol_rep scripts.

1998-09-08    <jaharkes@cs.cmu.edu>

	* Added Elliot Lee's patches for venus.

1998-09-02    <jaharkes@cs.cmu.edu>

	* ======== Release 4.6.5 =========
	* `cfs cs' as an alias for cfs checkservers
	* rpc2portmap & rc.vice updates for *BSD
	* increased SFTP retries to avoid losing a connection during tranfers.


1998-08-05    <braam@cs.cmu.edu>

	* ======== Release 4.6.4 =========
	* Fixed filcon to return errors instead of filter id's
	* Salvage prints a message when it finishes a partition
	* login directory removed
	* auth directory now contains login stuff and kerberos support
	* port numbers changed to IANA assigned numbers
	* update uses the portmapper (since it has no port anymore)
	* crud removed from several directories
	* norton: you can now create and remove names in directories.


1998-07-23    <jaharkes@telos.odyssey.cs.cmu.edu>

	* ======== Release 4.6.3 =========
	* Removed some network flooding avoidance mechanism which caused SFTP
	to work at 100KB/s on high bandwidth/low latency networks (100Base-T).
	* When a volume is not automatically salvage-able, ALL errors are
	reported instead of one. This is helpful when attempting to repair
	by hand.
	* Fix for norton, recreate a directory entry for some file.
	* Modified coda.spec to _not_ to create the /usr/bin/tixwish softlink.

1998-07-14    <jaharkes@telos.odyssey.cs.cmu.edu>

	* ======== Release 4.6.2 =========
	* coda-src/rpc2: Small piggybacked fragments were rejected by venus.
	* coda-src/scripts/venus-setup: Creates /coda/tmp as well.
	* coda-src/update/updateclnt.cc: Stopped the updateclient from
	changing the systemtime, it now warns you to use xntpd.